# agent-ai-cli

./: README.md  agentCLI-Phase1  agentCLI-Phase1.md  pyproject.toml
src/agent_cli/: config.py  main.py  repl.py  state.py
src/agent_cli/commands/: __init__.py
